--- a/index.css
+++ b/index.css
@@ -166,9 +166,11 @@ input:hover {
 .select-player {
     display: flex;
     width: 100%;
+    align-items: center;
+    justify-content: center;
     overflow-x: scroll;
     margin-top: 20px;
-    padding: 20px;
+    padding: 5px;
     border: 2px solid black;
 }
 
@@ -177,8 +179,7 @@ input:hover {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 150px;
-    height: 150px;
+    width: 110px;
 }
 
 .player:hover {
@@ -263,16 +264,15 @@ input:hover {
 }
 
 .card {
-    width: 90px;
-    height: 180px;
-    border: 8px solid #bcd;
+    width: 60px;
+    border: 4px solid #bcd;
     border-radius: 10px;
     transition: border 0.6s ease-in-out;
     margin-right: 5px;
 }
 
 .card:hover {
-    border: 4px solid #bcd;
+    border: 2px solid #bcd;
     cursor: pointer;
 }
 
