--- a/index.css
+++ b/index.css
@@ -263,6 +263,9 @@ input:hover {
     display: flex;
 }
 
+.label, .value {
+    font-size: 0.6em;
+
 .card {
     width: 60px;
     border: 4px solid #bcd;
